fix: events jumping

--- a/src/styles/events-page.css
+++ b/src/styles/events-page.css
@@ -16,4 +16,5 @@
   width: fit-content;
   display: block;
   margin-left: auto;
+  min-height: 40px;
 }
